fix text wrapping on profile page for long values

--- a/src/app/main/profile/profile.component.css
+++ b/src/app/main/profile/profile.component.css
@@ -12,7 +12,7 @@
 	/* grid */
 	display: grid;
 	/* grid-template-columns: [left-bar] 256px [left-bar-end body1] 1fr [body1-end body2] 1fr [body2-end]; */
-	grid-template-columns: [left-bar] auto [left-bar-end body1] 1fr [body1-end];
+	grid-template-columns: [left-bar] 18em [left-bar-end body1] 1fr [body1-end];
 	grid-template-rows: auto;
 	grid-gap: 1em;
 
@@ -64,7 +64,7 @@ hr.divider {
 * Grid items
 **************************************************************/
 .grid-header { grid-area: header; }
-.grid-profile { grid-area: profile; max-width: 16em; }
+.grid-profile { grid-area: profile; }
 .grid-box1 { grid-area: box1; }
 .grid-box2 { grid-area: box2; }
 .grid-box3 { grid-area: box3; }
@@ -96,11 +96,16 @@ table.profile {
 	border-spacing: 1em 0.25em;
 	width: 100%;
 	max-width: inherit;
+	table-layout: fixed;
 }
 table.profile tr { max-width: 16em; width: 100%; }
 .profile td.label {
 	font-weight: 600;
 	text-align: right;
+}
+.profile td.data {
+	display: -webkit-box; 
+	word-break: break-all;
 }
 .grid-profile button {
 	width: 100%;
